--- a/team.html
+++ b/team.html
@@ -90,6 +90,8 @@
                     <img src="images/Poorva Chadha_General Secretary.jpeg">
                     <h3>Poorva Chadha</h3>
                     <p>General Secretary</p>
+                    <p><a href = "mailto: poorva.chadha11@nmims.edu.in"style="color:#ff0000; text-decoration:none" >Contact</a>
+                    </p>
             </div>
                 
             </div>
@@ -98,11 +100,15 @@
                     <img src="images/rachnafinal.png">
                     <h3>Rachna Shetty</h3>
                     <p>Joint General Secretary <span><br><br>[Technical]</span></p>
+                    <p><a href = "mailto: rachana.shetty283@nmims.edu.in"style="color:#ff0000; text-decoration:none" >Contact</a>
+                    </p>
                 </div>
                 <div class="facility-col">
                     <img src="images/sehaj2.png">
                     <h3>Sehaj Bhalla</h3>
                     <p>Joint General Secretary <span><br><br>[Logistics & Administration]</span></p>
+                    <p><a href = "mailto: sehajsingh.bhalla09@nmims.edu.in"style="color:#ff0000; text-decoration:none" >Contact</a>
+                    </p>
                 </div>
             </div>
             <div class="row5">
@@ -110,11 +116,15 @@
                     <img src="images/madhvifina.png">
                     <h3>Madhavi Thanvi</h3>
                     <p>Lady Representative</p>
+                    <p><a href = "mailto: madhavi.thanvi193@nmims.edu.in"style="color:#ff0000; text-decoration:none" >Contact</a>
+                    </p>
                 </div>
                 <div class="facility-col">
                     <img src="images/tanyafinal.png">
                     <h3>Tanya Kulkarni</h3>
                     <p>Joint General Secretary <span><br><br>[Editorial & Public Relations]</span></p>
+                    <p><a href = "mailto: tanya.kulkarni42@nmims.edu.in"style="color:#ff0000; text-decoration:none" >Contact</a>
+                    </p>
                 </div>
             </div>
     </section>
