--- a/blog.html
+++ b/blog.html
@@ -34,7 +34,7 @@
         <div class="comment-box">
             <h3>Leave a question</h3>
             <form class="comment-form">
-                <form action="mail.php" method="post">
+                <form action="contact-form-handler.php" method="post">
                     <label for="name">Your Name</label>
                     <input type="text"  name="name" placeholder="Your name..">
                     <label for="lname">Email</label>
