--- a/cq.html
+++ b/cq.html
@@ -23,7 +23,14 @@
             </div>
             <i class="fa fa-bars" onclick="showMenu()"></i>
         </nav>
-            <h1>Colloquium</h1>  
+        <div class="container1"> 
+            <div class="text">
+              <h1>Colloquium</h1>
+            </div>
+            <div class="image1">
+                <img src="images/cq.png" class="comms">
+            </div>
+          </div> 
         </section>
  
         <section class="about-us">
