--- a/index.html
+++ b/index.html
@@ -111,7 +111,33 @@
             </div>
   
     </section>
-
+    <section class="campus2">
+        <h1>Hangout Spots</h1>
+            <div class="row6">
+                <div class="campus-col1">
+                    <img src="images/banner2.jpg">
+                    <div class="layer1">
+                        <h3>Canteen</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="row6">
+                <div class="campus-col1">
+                    <img src="images/boys.jpg">
+                    <div class="layer1">
+                        <h3>Boys Lounge</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="row6">
+                <div class="campus-col1">
+                    <img src="images/library.jpg">
+                    <div class="layer1">
+                        <h3>Library</h3>
+                    </div>
+                </div>
+            </div>
+    </section>
 <!-------- footer ---------->
 
 <section class="footer">
