--- a/4c.html
+++ b/4c.html
@@ -27,7 +27,7 @@ login<html>
         </section>
  
         <section class="about-us">
-
+            <div class="row">
                 <div class="about-col">
                     <h1>Our Vision</h1>     
                     <p>We at 4C - The Marketing Cell of MPSTME, under the NMIMS Deemed-to-be-University embarked on this journey back in 2008, with one collective vision in our minds - To Collect, Connect, Commence, and Contest in the rapidly evolving Marketing world, as depicted in our name. 
@@ -41,7 +41,10 @@ login<html>
                     </p>
                     <a href="" class="hero-btn red-btn">Register for Executive</a>
                 </div>
-
+                <div class="about-col">
+                    <img src="images/4c.png">
+                </div>
+            </div>    
         </section>
     
 <!-------- footer ---------->
